# jules-online-shop-backend

./: .env.example  .gitignore  Procfile  README.md  architecture.md  build.sh  manage.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
cart/: admin.py  models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_cartitem_options.py  0003_alter_cartitem_price_snapshot.py
catalog/: admin.py  models.py  serializers.py  urls.py  views.py
catalog/fixtures/: categories.json  product_images.json  products.json
catalog/migrations/: 0001_initial.py  0002_alter_category_unique_together_and_more.py
core/: models.py  pagination.py
jules_shop/: asgi.py  settings.py  urls.py  wsgi.py
orders/: admin.py  apps.py  dashboard.py  models.py  serializers.py  signals.py  urls.py  views.py
orders/fixtures/: order_fixtures.json
orders/migrations/: 0001_initial.py  0002_order_shipping_address_line1_and_more.py  0003_alter_order_shipping_address_line1_and_more.py  0004_alter_order_status.py  0005_orderitem_orders_orde_order_i_5d347b_idx_and_more.py  0006_order_orders_orde_user_id_02a211_idx.py
orders/tests/: test_models.py  test_serializers.py  test_views.py
users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
users/fixtures/: user_fixtures.json
users/migrations/: 0001_initial.py  0002_userprofile_address.py
utils/: helpers.py
