[tool.poetry]
name = "jules-online-shop-backend"
version = "0.1.0"
description = "Backend for client e-commerce project using Django and DRF"
authors = ["Sylvester Adade <sylvesteradade895@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.0"
Pillow = "^10.0"           # For image fields (ProductImage)
django-cors-headers = "^4.0"  # For frontend-backend cross-origin requests

[tool.poetry.group.dev.dependencies]
black = "^24.3"
isort = "^6.0"
flake8 = "^6.1"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
